[gd_scene load_steps=34 format=2]

[ext_resource path="res://sprites/hero/HERO_WALK5.png" type="Texture" id=1]
[ext_resource path="res://sprites/hero/HERO_WALK6.png" type="Texture" id=2]
[ext_resource path="res://PlayerK.gd" type="Script" id=3]
[ext_resource path="res://sprites/hero/HERO_WALK3.png" type="Texture" id=4]
[ext_resource path="res://sprites/hero/HERO_WALK4.png" type="Texture" id=5]
[ext_resource path="res://sprites/hero/HERO_IDLE1.png" type="Texture" id=6]
[ext_resource path="res://sprites/hero/HERO_JUMP2.png" type="Texture" id=7]
[ext_resource path="res://sprites/hero/HERO_JUMP1.png" type="Texture" id=8]
[ext_resource path="res://sprites/hero/HERO_IDLE2.png" type="Texture" id=9]
[ext_resource path="res://sprites/hero/HERO_WALK2.png" type="Texture" id=10]
[ext_resource path="res://sprites/hero/HERO_WALK1.png" type="Texture" id=11]
[ext_resource path="res://sprites/hero/HERO_DIE11.png" type="Texture" id=12]
[ext_resource path="res://sprites/hero/HERO_DIE9.png" type="Texture" id=13]
[ext_resource path="res://sprites/hero/HERO_DIE1.png" type="Texture" id=14]
[ext_resource path="res://sprites/hero/HERO_DIE2.png" type="Texture" id=15]
[ext_resource path="res://sprites/hero/HERO_DIE4.png" type="Texture" id=16]
[ext_resource path="res://sprites/hero/HERO_DIE6.png" type="Texture" id=17]
[ext_resource path="res://sprites/hero/HERO_DIE7.png" type="Texture" id=18]
[ext_resource path="res://sprites/hero/HERO_DIE8.png" type="Texture" id=19]
[ext_resource path="res://sprites/hero/HERO_DIE10.png" type="Texture" id=20]
[ext_resource path="res://sprites/hero/HERO_DIE3.png" type="Texture" id=21]
[ext_resource path="res://sprites/hero/HERO_DIE5.png" type="Texture" id=22]
[ext_resource path="res://sprites/hero/HERO_ATTACK7.png" type="Texture" id=23]
[ext_resource path="res://sprites/hero/HERO_ATTACK6.png" type="Texture" id=24]
[ext_resource path="res://sprites/hero/HERO_ATTACK3.png" type="Texture" id=25]
[ext_resource path="res://sprites/hero/HERO_ATTACK1.png" type="Texture" id=26]
[ext_resource path="res://sprites/hero/HERO_ATTACK5.png" type="Texture" id=27]
[ext_resource path="res://sprites/hero/HERO_ATTACK8.png" type="Texture" id=28]
[ext_resource path="res://sprites/hero/HERO_ATTACK2.png" type="Texture" id=29]
[ext_resource path="res://sprites/hero/HERO_ATTACK4.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 12 ) ],
"loop": true,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 28 ) ],
"loop": true,
"name": "attack",
"speed": 13.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "jump_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump_down",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.6716
height = 36.9517

[sub_resource type="CircleShape2D" id=3]
radius = 25.1386

[node name="Player" type="KinematicBody2D"]
position = Vector2( 176.626, 473.751 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
speed = 450.0
jump_speed = -1000.0

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.14046, 4.75653 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -80 )
current = true
smoothing_enabled = true

[node name="HitboxRight" type="Area2D" parent="."]
position = Vector2( 45.2584, 6.13177 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxRight"]
shape = SubResource( 3 )
disabled = true

[node name="HitboxLeft" type="Area2D" parent="."]
position = Vector2( -42.4049, 6.58365 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxLeft"]
shape = SubResource( 3 )
disabled = true
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
